--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,9 @@
   <title>HTML Portfolio</title>
 </head>
 <body>
-<p class="header">hi</p>
-<h1>Dylan</h1>
+<div class="header">
+  <h1>Dylan</h1>
+</div>
 
 </body>
 </html>
