--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <h1>Dylan</h1>
   <h2>software developer</h2>
 </div>
- <div class="tagLine">
+ <div class="tagline">
   <p>When you dab too hard</p> 
  </div>
 </body>
