--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,8 @@
 </div>
  <div class="tagline">
   <p>When you dab too hard</p> 
+  <h3>Here's What I Do</h3>
+  <p>I like to play football</p>
  </div>
 </body>
 </html>
