--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,6 @@
   <h3>Here's What I Do</h3>
   <p>I like to play football</p>
  </div>
-<div>
-<p>I like trains</p>    
-</div>
+<p class="skills">I like trains</p>    
 </body>
 </html>
