--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,8 @@
   <h3>Here's What I Do</h3>
   <p>I like to play football</p>
  </div>
-<p class="skills">I like trains</p>    
+<div ="skills">
+    <h3>my skills</h3>
+</div>   
 </body>
 </html>
