--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
  </div>
 <div ="skills">
     <h3>my skills</h3>
+    <p>I enjoy writing front-end code with these technologies</p>
 </div>   
 </body>
 </html>
