--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,8 @@
   <h3>Here's What I Do</h3>
   <p>I like to play football</p>
  </div>
-<div ="skills">
-    <h3>my skills</h3>
+<div>
+    <h3 class="skills">my skills</h3>
     <p>I enjoy writing front-end code with these technologies</p>
 </div>   
 </body>
