made skills class

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
  </div>
 <div>
     <h3 class="skills">my skills</h3>
-    <p>I enjoy writing front-end code with these technologies</p>
+    <p class="skills">I enjoy writing front-end code with these technologies</p>
 </div>   
 </body>
 </html>
