--- a/src/index.html
+++ b/src/index.html
@@ -17,8 +17,8 @@
   <p>I like to play football</p>
  </div>
 <div>
-    <h3 class="skills">my skills</h3>
     <p class="skills">I enjoy writing front-end code with these technologies</p>
+    <h3>my skills</h3>
 </div>   
 </body>
 </html>
