made a change to my code

--- a/src/index.html
+++ b/src/index.html
@@ -16,9 +16,7 @@
   <h3>Here's What I Do</h3>
   <p>I like to play football</p>
  </div>
-<div>
-    <p class="skills">I enjoy writing front-end code with these technologies</p>
     <h3>my skills</h3>
-</div>   
+    <p>I enjoy writing front-end code with these technologies</p>
 </body>
 </html>
