--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,9 @@
   <h3>Here's What I Do</h3>
   <p>I like to play football</p>
  </div>
-    <h3 class="skills">my skills</h3>
+    <div class="skills">
+    <h3>my skills</h3>
     <p>I enjoy writing front-end code with these technologies</p>
+    </div>
 </body>
 </html>
