--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,11 @@
     <div class="skills">
     <h3>my skills</h3>
     <p>I enjoy writing front-end code with these technologies</p>
+    <uL>
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>JQUERY</li>
+    </uL>
     </div>
 </body>
 </html>
