--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,9 @@
     </uL>
     </div>
     <div class="contact">
-        
+    <h3>
+    drop me a line  
+    </h3>    
     </div>
 </body>
 </html>
