--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
     <h3>
     drop me a line  
     </h3>    
-    <p>text me or email me</p>
+    <p><a href="https://github.com/">text me or email me</a></p>
     </div>
 </body>
 </html>
